@@ -36,7 +36,7 @@ using namespace std;
 #include <limits.h>
 #include <assert.h>
 #include <pthread.h>
-#ifdef HAS_SYS_STAT_H
+#ifdef HAVE_SYS_STAT_H
 #include <sys/stat.h>
 #endif
 #include "eyedb_p.h"
